--- a/handouts/Module 1 Notes.ipynb
+++ b/handouts/Module 1 Notes.ipynb
@@ -75,12 +75,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d3e1097f-12f7-4860-8b07-d0050800e0f3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "you can add more github notes here"
+    "#you can add more github notes here"
    ]
   },
   {
@@ -92,31 +92,94 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6ccb6cea-bef0-4be8-a4f5-57be0ee8e2e7",
+   "cell_type": "markdown",
+   "id": "7935d51b-217f-4715-b410-e2aa3a4e492b",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "put your notes here"
+    "- CTRL + SHIFT + C: opens up a Jlab search bar\n",
+    "- keyboard shortcuts are useful to learn!\n",
+    "- ESC exits edit mode, so I can alter the document structure\n",
+    "- ENTER enters edit mode\n",
+    "- CTRL + ENTER excutes cell(run py, or fmts markdown) and move to the next cell\n",
+    "- a > new cell Above\n",
+    "- b > new cell below\n",
+    "- d, d> delete cell\n",
+    "- m > changes cell to markdown\n",
+    "- y > changes cell to python \n",
+    "- i,i stop the code from running!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "6ccb6cea-bef0-4be8-a4f5-57be0ee8e2e7",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello World!\") # this is a comment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "e796f94f-ac83-48ae-bccf-c2da07d1fb46",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[1;31mSignature:\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m/\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+       "\u001b[1;31mDocstring:\u001b[0m Return the number of items in a container.\n",
+       "\u001b[1;31mType:\u001b[0m      builtin_function_or_method\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "len?"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "e074dbc8-3d08-459d-ad39-5b479e38f6d3",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "## Python Notes"
+    "## Python Notes\n",
+    "- Syntax help for functions:\n",
+    "    - If superpowers enabled, often show up automatically\n",
+    "    - Else: shift+tab after the \"(\" will uaually show it\n",
+    "    - Jlab's help is good\n",
+    "\n",
+    "### CLEAR ALL OUTPUT AND RUN ALL CELLS\n",
+    "1. to see if code works in sequence\n",
+    "2. so that everyone running it gets same outputs\n",
+    "3. if some section of code is incomplete/error, and you can run rest without it, comment that code out \n",
+    "\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4155a170-55d7-4c84-aedf-09ab96953474",
    "metadata": {},
    "outputs": [],
    "source": [
-    "put your notes here"
+    "#put your notes here"
    ]
   },
   {
@@ -130,7 +193,9 @@
   {
    "cell_type": "markdown",
    "id": "dba41ddd-fdfe-4a0d-8283-9d97966dc854",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "copy the table from 2.2 of the textbook here! you can use this trick to copy it quickly: https://ledatascifi.github.io/ledatascifi-2023/content/01/05_jupyterlab.html?highlight=youtube#a-good-trick-how-do-i-copy-code-from-one-file-to-another"
    ]
@@ -152,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
